[package]
name = "hamster-report"
version = "0.1.0"
authors = ["Alex Studer <alex@studer.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = { git = "https://github.com/dpbriggs/bigdecimal-rs", rev="02ba26b" }
chrono = "0.4.19"
csv = "1.1.3"
structopt = "0.3.20"
sqlite = "0.25.3"